feat：服务详情
