# controller/service.go
@@ -18,7 +18,9 @@ func ServiceRegister(group *gin.RouterGroup) {
 	service := &ServiceController{}
 	group.GET("/service_list", service.ServiceList)
 	group.GET("/service_delete", service.ServiceDelete)
+	group.GET("/service_detail", service.ServiceDetail)
 	group.POST("/service_add_http", service.ServiceAddHTTP)
+	group.POST("/service_update_http", service.ServiceUpdateHTTP)
 }
 
 // ServiceList godoc
@@ -33,30 +35,30 @@ func ServiceRegister(group *gin.RouterGroup) {
 // @Param page_no query int true "当前页数"
 // @Success 200 {object} middleware.Response{data=dto.ServiceListOutput} "success"
 // @Router /service/service_list [get]
-func (service *ServiceController) ServiceList(ctx *gin.Context) {
+func (service *ServiceController) ServiceList(c *gin.Context) {
 	params := &dto.ServiceListInput{}
-	if err := params.BindValidParam(ctx); err != nil {
-		middleware.ResponseError(ctx, 2000, err)
+	if err := params.BindValidParam(c); err != nil {
+		middleware.ResponseError(c, 2000, err)
 		return
 	}
 	tx, err := lib.GetGormPool("default")
 	if err != nil {
-		middleware.ResponseError(ctx, 2001, err)
+		middleware.ResponseError(c, 2001, err)
 		return
 	}
 	// 从DB中分页读取基本信息
 	serviceInfo := &dao.ServiceInfo{}
-	list, total, err := serviceInfo.PageList(ctx, tx, params)
+	list, total, err := serviceInfo.PageList(c, tx, params)
 	if err != nil {
-		middleware.ResponseError(ctx, 2002, err)
+		middleware.ResponseError(c, 2002, err)
 		return
 	}
 	// 格式化输出信息
 	var outList []dto.ServiceListItemOutput
 	for _, listItem := range list {
-		serviceDetail, err := listItem.ServiceDetail(ctx, tx, &listItem)
+		serviceDetail, err := listItem.ServiceDetail(c, tx, &listItem)
 		if err != nil {
-			middleware.ResponseError(ctx, 2003, err)
+			middleware.ResponseError(c, 2003, err)
 			return
 		}
 		serviceAddr := "unknown"
@@ -105,7 +107,7 @@ func (service *ServiceController) ServiceList(ctx *gin.Context) {
 		Total: total,
 		List:  outList,
 	}
-	middleware.ResponseSuccess(ctx, out)
+	middleware.ResponseSuccess(c, out)
 }
 
 // ServiceDelete godoc
@@ -118,33 +120,70 @@ func (service *ServiceController) ServiceList(ctx *gin.Context) {
 // @Param id query string true "服务ID"
 // @Success 200 {object} middleware.Response{data=string} "success"
 // @Router /service/service_delete [get]
-func (service *ServiceController) ServiceDelete(ctx *gin.Context) {
+func (service *ServiceController) ServiceDelete(c *gin.Context) {
 	params := &dto.ServiceDeleteInput{}
-	if err := params.BindValidParam(ctx); err != nil {
-		middleware.ResponseError(ctx, 2000, err)
+	if err := params.BindValidParam(c); err != nil {
+		middleware.ResponseError(c, 2000, err)
 		return
 	}
 	tx, err := lib.GetGormPool("default")
 	if err != nil {
-		middleware.ResponseError(ctx, 2001, err)
+		middleware.ResponseError(c, 2001, err)
 		return
 	}
 	// 读取服务基本信息
 	serviceInfo := &dao.ServiceInfo{ID: params.ID}
-	serviceInfo, err = serviceInfo.Find(ctx, tx, serviceInfo)
+	serviceInfo, err = serviceInfo.Find(c, tx, serviceInfo)
 	if err != nil {
-		middleware.ResponseError(ctx, 2002, err)
+		middleware.ResponseError(c, 2002, err)
 		return
 	}
 
 	serviceInfo.IsDelete = 1
-	err = serviceInfo.Save(ctx, tx)
+	err = serviceInfo.Save(c, tx)
 	if err != nil {
-		middleware.ResponseError(ctx, 2003, err)
+		middleware.ResponseError(c, 2003, err)
 		return
 	}
 
-	middleware.ResponseSuccess(ctx, "")
+	middleware.ResponseSuccess(c, "")
+}
+
+// ServiceDetail godoc
+// @Summary 服务详情
+// @Description 服务详情
+// @Tags 服务管理
+// @ID /service/service_detail
+// @Accept  json
+// @Produce  json
+// @Param id query string true "服务ID"
+// @Success 200 {object} middleware.Response{data=dao.ServiceDetail} "success"
+// @Router /service/service_detail [get]
+func (service *ServiceController) ServiceDetail(c *gin.Context) {
+	params := &dto.ServiceDeleteInput{}
+	if err := params.BindValidParam(c); err != nil {
+		middleware.ResponseError(c, 2000, err)
+		return
+	}
+	tx, err := lib.GetGormPool("default")
+	if err != nil {
+		middleware.ResponseError(c, 2001, err)
+		return
+	}
+	// 读取服务基本信息
+	serviceInfo := &dao.ServiceInfo{ID: params.ID}
+	serviceInfo, err = serviceInfo.Find(c, tx, serviceInfo)
+	if err != nil {
+		middleware.ResponseError(c, 2002, err)
+		return
+	}
+
+	serviceDetail, err := serviceInfo.ServiceDetail(c, tx, serviceInfo)
+	if err != nil {
+		middleware.ResponseError(c, 2003, err)
+		return
+	}
+	middleware.ResponseSuccess(c, serviceDetail)
 }
 
 // ServiceAddHTTP godoc
@@ -164,29 +203,28 @@ func (service *ServiceController) ServiceAddHTTP(c *gin.Context) {
 		return
 	}
 
+	if len(strings.Split(params.IpList, ",")) != len(strings.Split(params.WeightList, ",")) {
+		middleware.ResponseError(c, 2001, errors.New("IP列表与权重列表数量不一致"))
+		return
+	}
+
 	tx, err := lib.GetGormPool("default")
 	if err != nil {
-		middleware.ResponseError(c, 2001, err)
+		middleware.ResponseError(c, 2002, err)
 		return
 	}
 	tx = tx.Begin()
 	serviceInfo := &dao.ServiceInfo{ServiceName: params.ServiceName}
-	if _, err = serviceInfo.Find(c, tx, serviceInfo); err == nil {
+	if _, err = serviceInfo.Find(c, tx, serviceInfo); err != nil {
 		tx.Rollback()
-		middleware.ResponseError(c, 2002, errors.New("服务已存在"))
+		middleware.ResponseError(c, 2003, errors.New("服务已存在"))
 		return
 	}
 
 	httpUrl := &dao.HttpRule{RuleType: params.RuleType, Rule: params.Rule}
-	if _, err := httpUrl.Find(c, tx, httpUrl); err == nil {
+	if _, err := httpUrl.Find(c, tx, httpUrl); err != nil {
 		tx.Rollback()
-		middleware.ResponseError(c, 2003, errors.New("服务接入前缀或域名已存在"))
-		return
-	}
-
-	if len(strings.Split(params.IpList, ",")) != len(strings.Split(params.WeightList, ",")) {
-		tx.Rollback()
-		middleware.ResponseError(c, 2004, errors.New("IP列表与权重列表数量不一致"))
+		middleware.ResponseError(c, 2004, errors.New("服务接入前缀或域名已存在"))
 		return
 	}
 
@@ -240,6 +278,98 @@ func (service *ServiceController) ServiceAddHTTP(c *gin.Context) {
 		UpstreamIdleTimeout:    params.UpstreamIdleTimeout,
 		UpstreamMaxIdle:        params.UpstreamMaxIdle,
 	}
+	if err := loadBalance.Save(c, tx); err != nil {
+		tx.Rollback()
+		middleware.ResponseError(c, 2008, err)
+		return
+	}
+	tx.Commit()
+	middleware.ResponseSuccess(c, "")
+}
+
+// ServiceUpdateHTTP godoc
+// @Summary 修改HTTP服务
+// @Description 修改HTTP服务
+// @Tags 服务管理
+// @ID /service/service_update_http
+// @Accept  json
+// @Produce  json
+// @Param polygon body  dto.ServiceUpdateHTTPInput true "body"
+// @Success 200 {object} middleware.Response{data=string} "success"
+// @Router /service/service_update_http [post]
+func (service *ServiceController) ServiceUpdateHTTP(c *gin.Context) {
+	params := &dto.ServiceUpdateHTTPInput{}
+	if err := params.BindValidParam(c); err != nil {
+		middleware.ResponseError(c, 2000, err)
+		return
+	}
+
+	if len(strings.Split(params.IpList, "\n")) != len(strings.Split(params.WeightList, "\n")) {
+		middleware.ResponseError(c, 2001, errors.New("IP列表与权重列表数量不一致"))
+		return
+	}
+
+	tx, err := lib.GetGormPool("default")
+	if err != nil {
+		middleware.ResponseError(c, 2002, err)
+		return
+	}
+
+	tx = tx.Begin()
+	serviceInfo := &dao.ServiceInfo{ServiceName: params.ServiceName}
+	serviceInfo, err = serviceInfo.Find(c, tx, serviceInfo)
+	if err != nil {
+		tx.Rollback()
+		middleware.ResponseError(c, 2003, errors.New("服务不存在"))
+		return
+	}
+	serviceDetail, err := serviceInfo.ServiceDetail(c, tx, serviceInfo)
+	if err != nil {
+		tx.Rollback()
+		middleware.ResponseError(c, 2004, errors.New("服务不存在"))
+		return
+	}
+
+	info := serviceDetail.Info
+	info.ServiceDesc = params.ServiceDesc
+	if err := info.Save(c, tx); err != nil {
+		tx.Rollback()
+		middleware.ResponseError(c, 2005, err)
+		return
+	}
+
+	httpRule := serviceDetail.HTTPRule
+	httpRule.NeedHttps = params.NeedHttps
+	httpRule.NeedStripUri = params.NeedStripUri
+	httpRule.NeedWebsocket = params.NeedWebsocket
+	httpRule.UrlRewrite = params.UrlRewrite
+	httpRule.HeaderTransfor = params.HeaderTransfor
+	if err := httpRule.Save(c, tx); err != nil {
+		tx.Rollback()
+		middleware.ResponseError(c, 2006, err)
+		return
+	}
+
+	accessControl := serviceDetail.AccessControl
+	accessControl.OpenAuth = params.OpenAuth
+	accessControl.BlackList = params.BlackList
+	accessControl.WhiteList = params.WhiteList
+	accessControl.ClientIPFlowLimit = params.ClientipFlowLimit
+	accessControl.ServiceFlowLimit = params.ServiceFlowLimit
+	if err := accessControl.Save(c, tx); err != nil {
+		tx.Rollback()
+		middleware.ResponseError(c, 2007, err)
+		return
+	}
+
+	loadBalance := serviceDetail.LoadBalance
+	loadBalance.RoundType = params.RoundType
+	loadBalance.IpList = params.IpList
+	loadBalance.WeightList = params.WeightList
+	loadBalance.UpstreamConnectTimeout = params.UpstreamConnectTimeout
+	loadBalance.UpstreamHeaderTimeout = params.UpstreamHeaderTimeout
+	loadBalance.UpstreamIdleTimeout = params.UpstreamIdleTimeout
+	loadBalance.UpstreamMaxIdle = params.UpstreamMaxIdle
 	if err := loadBalance.Save(c, tx); err != nil {
 		tx.Rollback()
 		middleware.ResponseError(c, 2008, err)
